# command-error

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yaml  version.yaml
src/: child_context.rs  child_ext.rs  command_display.rs  command_ext.rs  debug_display.rs  error.rs  exec_error.rs  lib.rs  output.rs  output_context.rs  output_conversion_error.rs  output_error.rs  output_like.rs  process_wrap.rs  try_wait_context.rs  utf8_program_and_args.rs  wait_error.rs
tests/data/: incomplete.json
