[workspace]
resolver = "2"

[package]
name = "command-error"
version = "0.4.1"
description = "Detailed error messages and status checking for `std::process::Command`"
edition = "2021"
license = "MIT"
repository = "https://github.com/9999years/command-error"
authors = [
    "Rebecca Turner <rbt@sent.as>"
]
keywords = ["command", "process", "error"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[workspace.metadata.release]
# Set the commit message.
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
consolidate-commits = false # One commit per crate.
tag = false # Don't tag commits.
push = false # Don't do `git push`.
publish = false # Don't do `cargo publish`.

[dependencies]
process-wrap = { version = "8", features = ["std"], optional = true }
dyn-clone = "1.0.17"
shell-words = "1"
tracing = { version = "0", optional = true }
utf8-command = "1"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
static_assertions = "1.1.0"

[features]
default = ["process-wrap"]
